fixed hanging cover on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2493,7 +2493,7 @@ video {
         width: calc(50% - 35px);
     }
     .books-grid > img {
-        width: 20%;
+        width: 25%;
     }
 }
 
